@@ -1,4 +1,4 @@
 #define RUBY_VERSION "1.6.4"
-#define RUBY_RELEASE_DATE "2001-06-04"
+#define RUBY_RELEASE_DATE "2001-06-05"
 #define RUBY_VERSION_CODE 164
-#define RUBY_RELEASE_CODE 20010604
+#define RUBY_RELEASE_CODE 20010605
